# oxidlog

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  search.html
.github/workflows/: ci.yml
.jot/: config.toml  journal.json
.oxidlog/: config.toml  journal.json
docs/: book.toml  index.md  mkdocs.yml
docs/book/: 404.html  install.html  intro.html  print.html  searchindex.js  searchindex.json
docs/book/reference/: commands.html  config.html
docs/book/usage/: advanced.html  basic.html  dates.html  first-journal.html  managing-entries.html  search.html  tips.html  viewing.html
docs/getting-started/: installation.md
docs/site/: 404.html  sitemap.xml
docs/user-guide/: configuration.md
docs/user-guide/commands/: init.md  search.md
search/: search_index.json
src/: main.rs
src/.ipynb_checkpoints/: main-checkpoint.rs
src/cli/: mod.rs
src/commands/: add.rs  backup.rs  edit.rs  export.rs  init.rs  mod.rs  remove.rs  search.rs  view.rs
src/error/: mod.rs
src/storage/: config.rs  journal.rs  mod.rs
src/utils/: mod.rs
