[package]
name = "jot"
version = "0.1.0"
edition = "2021"
description = "A command-line note-taking application"
license = "MIT"

[dependencies]
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
thiserror = "*"
dirs = "*"
clap = { version = "*", features = ["derive"] }
colored = "*"

[dev-dependencies]
tempfile = "*"

[[bin]]
name = "jot-cli"
path = "src/main.rs"
