[package]
name = "OxidLog"
version = "0.1.1"
edition = "2021"
description = "A command-line note-taking application"
license = "MIT"
repository = "https://github.com/kortgrabb/oxidlog"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"
thiserror = "2.0.9"
dirs = "5.0.1"
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
dialoguer = "0.11.0"

[dev-dependencies]
tempfile = "3.14.0"

[[bin]]
name = "xlog"
path = "src/main.rs"
